index navbar header

--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html lang="no">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width, initial-scale=1">
+        <link rel="stylesheet" href="style/style.css">
+        <!--Alle må huske title i sin html-->
+        <title>sulten!</title>
     </head>
     <body>
+
+        <header>
+
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/Logo_blå.png" alt="Sulten hjem">
+                </a>
+            </div>
+
+        </header>
+
+        <nav>
+            <div class="navbar-home" >
+                <a href="meny.html">MENY</a>
+                <a href="booking.html">BOOKING</a>
+                <a href="brukervennlighet.html">ACCESSIBILITY PAGE</a>
+                <a href="aktuelt.html">TOPICAL PAGE</a>
+            </div>
+
+        </nav>
+
+        <main>
+            <!--Slideshow-->
+        </main>
 
     </body>
 </html>
