--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scale=1">
         <link rel="stylesheet" href="style/style.css">
+        <!--Skal vi bruke favicon?-->
+        <link rel="icon" href="images/Logo_blå.png"    type="image/x-icon">
         <!--Alle må huske title i sin html-->
         <title>sulten!</title>
     </head>
