font awesome icons added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scale=1">
         <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!--Skal vi bruke favicon?-->
-        <link rel="icon" href="images/Logo_blå.png"    type="image/x-icon">
+        <link rel="icon" href="images/Logo_blå.png" type="image/x-icon">
         <!--Alle må huske title i sin html-->
         <title>sulten!</title>
     </head>
@@ -64,17 +65,15 @@
                 <!--JavaScript for slideshow-->
                 <script src="javascript/myFile.js"></script>
 
-
-
         </main>
 
         <footer>
 
-            <!--Kontaktinfo + instagramlogo-->
+            <!--Åpningstider, kontaktinfo, adresse-->
             <div class="rad-footer">
                 <div class="footercolumn">
                     <p class="overskrift-footer">Åpningstider</p>
-                    <p>Mandag-fredag 09:00-16:00 </p>
+                    <p>Mandag-fredag 09:00-16:00</p>
                     <p>Lørdag 09:00-15:00</p>
                     <p>Søndag stengt</p>
                 </div>
@@ -82,14 +81,16 @@
                 <div class="footercolumn">
                     <p class="overskrift-footer">Kontaktinfo</p>
                     <p>Telefonnummer (+47) 657 56 589</p>
-                    <p><a href="mailto:restaurantsulten@sulten.com">Send e-post</a></p>
-                    <p><a href="https://facebook.com" target="_blank">Besøk vår facebookside</a></p>
+                    <a href="https://facebook.com" target="_blank" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg"></a>
+                    <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg"></a>
                 </div>
             
                 <div class="footercolumn">
                     <p class="overskrift-footer">Adresse</p>
                     <p>Skomværsgata 2</p>
-                    <p>3921 Porsgrunn</p>        
+                    <p>3921 Porsgrunn</p>
                 </div>
             </div>
         
