--- a/meny.html
+++ b/meny.html
@@ -56,25 +56,34 @@
         </div>
     
         <div class="box-meny">
+
+            <div class="matrett">
                 <h3 class="minitittel">Havregrøt <span style="float: right">89,-</span></h3>
-                    <p>Havregrøt med friske bringebær, skivet banan,</p> 
-                    <p>kokosflak, kanel og sirup.</p>
-                    <p class ="allergener">[Hvete, melk]</p>
+                <p>Havregrøt med friske bringebær, skivet banan,</p> 
+                <p>kokosflak, kanel og sirup.</p>
+                <p class ="allergener">[Hvete, melk]</p>
+            </div>
 
+            <div class="matrett">
                 <h3 class="minitittel">Avokadotoast <i class="fa-solid fa-leaf"></i> <span style="float: right">99,-</span></h3>
-                    <p>Avokado, syltet rødløk, sesamfrø,</p>
-                    <p>alfalfaspirer på toasted surdeigsbrød.</p>
-                    <p class ="allergener">[Hvete]</p>
+                <p>Avokado, syltet rødløk, sesamfrø,</p>
+                <p>alfalfaspirer på toasted surdeigsbrød.</p>
+                <p class ="allergener">[Hvete]</p>
+            </div>
 
+            <div class="matrett">
                 <h3 class="minitittel">Vitaminsuppe <span style="float: right">119,-</span></h3>
-                    <p>Suppe med gulrøtter, selleri, paprika og reddiker.</p>
-                    <p>Toppet med krutonger og rømme.</p>
-                    <p class ="allergener">[Hvete, melk]</p>
+                <p>Suppe med gulrøtter, selleri, paprika og reddiker.</p>
+                <p>Toppet med krutonger og rømme.</p>
+                <p class ="allergener">[Hvete, melk]</p>
+            </div>
 
+            <div class="matrett">
                 <h3 class="minitittel">Granola yoghurt<span style="float: right">89,-</span></h3>
-                    <p>Vaniljeyoghurt, granola og blåbær.</p>
-                    <p>Toppet med tørkede jordbær.</p>
-                    <p class ="allergener">[Hvete, mandler]</p>
+                <p>Vaniljeyoghurt, granola og blåbær.</p>
+                <p>Toppet med tørkede jordbær.</p>
+                <p class ="allergener">[Hvete, mandler]</p>
+            </div>
         </div>
 
     </div>
