--- a/aktuelt.html
+++ b/aktuelt.html
@@ -117,7 +117,7 @@
                         <div class="graf1">
                            <h1>What do you think of a development where more and more products and homes become smart and connected? - 2019</h1>
                            <canvas id="topicalPage" height="400" width="500"></canvas>
-                           <script src="figure1.js"></script>   
+                           <script src="javascript/figure1.js"></script>   
                        <div class="tekstGraf">
                            <p><b>Figure 4-1</b>: Question – what do you think of a development where ordinary products and homes
                                become more and more connected (to the internet) and “smart” (more autonomous)? Among all.
@@ -156,7 +156,7 @@
                     <h1>To what extent do you think it is reasonable/sensible that more and more ordinary
                         products become smart and connected to the internet? - 2019</h1>
                     <canvas id="topicalPage1" height="300" width="400"></canvas>
-                    <script src="figure2.js"></script>
+                    <script src="javascript/figure2.js"></script>
                 <div class="tekstGraf">
                     <p><b>Figure 4-2</b>: Question – to what extent do you find it reasonable/sensible (fornuftig) that more and 
                         more “regular” products become smart and connected to the internet. Among all. Total, and by 
