--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!--Alle må legge inn favicon-->
-        <link rel="icon" href="images/logo.png" type="image/x-icon">
+        <link rel="icon" href="images/utropstegn.png" type="image/x-icon">
         <!--Alle må huske title i sin html-->
         <title>sulten!</title>
     </head>
