--- a/meny.html
+++ b/meny.html
@@ -5,6 +5,15 @@
         <meta name="viewport" content="width-device-width, initial-scale=1">
         <link rel="stylesheet" href="style/menystyle.css">
         <script src="https://kit.fontawesome.com/fbb98cbe58.js" crossorigin="anonymous"></script>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
         <!--Alle må huske title i sin html-->
         <title>sulten!</title>
     </head>
@@ -12,10 +21,9 @@
 
         <header>
 
-            <!--Lage logo i annen farge enn blå? Feks brun?-->
             <!--Legge inn bildekilde-->
-            <a href="index.html">
-                <img src="images/Logo_blå.png" alt="Sulten hjemlogo">
+            <a href="meny.html">
+                <img src="images/logo.png" alt="Sulten hjemlogo">
             </a>
 
         </header>
@@ -52,7 +60,6 @@
     <div class="frokostmeny">
         
         <div class="box-meny">
-
             <div class="matrett">
                 <h3 class="minitittel">Havregrøt <span style="float: right">89,-</span></h3>
                 <p>Havregrøt med friske bringebær, skivet banan,</p> 
@@ -81,7 +88,7 @@
                 <p class ="allergener">[Hvete, mandler]</p>
             </div>
         </div>
-        <div class="box-meny">
+        <div class="box-meny-frokostbilde">
             <img src="images/havre.jpg" alt="havregrøt">
         </div>
 
@@ -92,7 +99,9 @@
         <h2>Lunsj</h2>
     </div>
         <div class ="lunsjmeny">
+
             <div class="box-meny-lunsj">
+
             <div class="matrett">
                 <h3 class="minitittel">Acai bowl <i class="fa-solid fa-leaf"></i><span style="float: right;">119,-</span></h3>
                     <p>Frossen acai toppet med granola, blåbær,</p>
@@ -132,7 +141,7 @@
 
         <div class="dessertmeny">
 
-            <div class="box-meny">
+            <div class="box-meny-dessert-bilde">
             <img src="images/croissant.jpg" alt="croissant">
             </div>
 
