--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
         <!-- Toggle meny istadenfor kolonna som brukast no? -->
 
+        <!-- Har vi lagt inn kilder på alt?? Bilder, kor vi har henta js frå osv??? -->
+
         <header>
 
             <!--Lage logo i annen farge enn blå? Feks brun?-->
