--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
         <!-- Har vi lagt inn kilder på alt?? Bilder, kor vi har henta js frå osv??? -->
 
+        <!-- Har alle brukt gode kommentarer underveis slik at en annen lett kan komme inn og ta over koden? -->
+
         <header>
 
             <!--Lage logo i annen farge enn blå? Feks brun?-->
