--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         <!-- Har alle brukt gode kommentarer underveis slik at en annen lett kan komme inn og ta over koden? -->
 
+        <!-- Sjekk grading sheet -->
+
         <header>
 
             <!--Lage logo i annen farge enn blå? Feks brun?-->
