--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
         <!-- Kommentere meir i myFile.js? -->
 
+        <!-- Åpningstider på forside, meny og booking må være like (ukedag skrives ikke med stor bokstav midt i en setning)-->
+
+        <!-- Når alle bilder på forside er lagt inn, så må eg sjekke at høyden ikkje forandres i tablet- og mobilversjon -->
+
         
         <header>
 
@@ -79,7 +83,7 @@
 
             </div>
 
-                <!-- Sirkler -->
+                <!-- Sirkler under slideshow -->
                 <div style="text-align: center">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -94,9 +98,8 @@
             <div class="rad-footer">
                 <div class="kolonne-footer">
                     <h2>Åpningstider</h2>
-                    <p>Man-fre 09-16</p>
-                    <p>Lørdag 09-15</p>
-                    <p>Søndag stengt</p>
+                    <p>Man - tor 12 - 23</p>
+                    <p>Fre - søn 12 - 02</p>
                 </div>
         
                 <div class="kolonne-footer">
