tester nytt bilde

--- a/meny.html
+++ b/meny.html
@@ -46,12 +46,12 @@
  
 <!--Hovedbilde med tekst-->
         <div class="container">
-            <img src="images/menyhovedbilde.jpg" alt="salat">
-            <h1 class="centered">Velkommen til vår kafé. Her kan du nyte et godt måltid i en behagelig atmosfære.</h1>
+            <img src="images/restaurantMeny.jpg" alt="restaurant">
+            <h1 class="centered">Velkommen til vår restaurant. Her kan du nyte et godt måltid i en behagelig atmosfære.</h1>
         </div>
 
         <div class="meny">  
-            <h1 style="color:#382c20; font-size: 58px; text-align: center;">Meny</h1> 
+            <h1 style=" font-size: 58px; text-align: center;">Meny</h1> 
                 <h2 style="color: #382c20; font-size: 28px; text-align: center;">Åpningstider: </h2>
                     <p class="åpningstider">Mandag-torsdag 12:00-23:00 </p>
                     <p class="åpningstider">Fredag-søndag 12:00-02:00</p>
