--- a/aktuelt.html
+++ b/aktuelt.html
@@ -35,6 +35,7 @@
                 <img src="images/IoT-white.png" alt="Internet of things icon spinning">  
              </div>
             <a href="javascript:void(0)" class="closebtn text-white" onclick="OpenOrClose()"></a> 
+            <a href="index.html">FORSIDE</a>
             <a href="meny.html">MENY</a>
             <a href="brukervennlighet.html">ACCESSIBILITY PAGE</a>
             <a href="aktuelt.html">TOPICAL PAGE</a>
@@ -80,9 +81,11 @@
                 </div>
                 <div class="item">
                     <div class="bildeIntro">
-                        <img src="images/dag.jpeg">
-                   
+                        <img src="images/dag.jpeg" alt="Dag Slettemeås">
                         <div class="bildeTekst-intro">
+                            <div class="bildeTekst-kilde">
+                              <p><small>OsloMet, (u.å.)</small></p>  
+                            </div>
                             <h3>Smart technologies in connected homes – A 2019 Norwegian consumer survey</h3>
                             <p><b>Author</b> Dag Slettemeås</p>
                             <p><b>Publisher</b> Consumption Research Norway (SIFO), OsloMet – Oslo Metropolitan University</p>
