--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <!-- Legge inn kilde på js under -->
         <nav id="mySidebar">
             <a href="javascript:void(0)" class="closebtn text-white" onclick="OpenOrClose()"></a> 
+            <a href="index.html">FORSIDE</a>
             <a href="meny.html">MENY</a>
             <a href="brukervennlighet.html">ACCESSIBILITY PAGE</a>
             <a href="aktuelt.html">TOPICAL PAGE</a>
