--- a/aktuelt.html
+++ b/aktuelt.html
@@ -45,6 +45,7 @@
             <a href="booking.html" class="nav-booking">BOOKING</a>  
         </div>
         <!--Javascript for å åpne og lukke sidebaren-->
+        <!--Hentet fra https://stackoverflow.com/questions/63960934/i-want-to-close-this-side-bar-by-clicking-same-button-->
         <div id="main">
             <button class="openbtn" onclick="OpenOrClose()">☰</button>
         </div>
