--- a/aktuelt.html
+++ b/aktuelt.html
@@ -78,7 +78,9 @@
                     <p style="padding-top: 1.5rem;">As Oracle states: "The Internet of Things (IoT) describes the network of physical objects—“things”—that are embedded with sensors, 
                         software, and other technologies for the purpose of connecting and exchanging data with other devices and systems over the internet. 
                         These devices range from ordinary household objects to sophisticated industrial tools."(Oracle, 2021). </p>
-                    <button class="knapp-intro" onclick=" window.open(' https://www.oracle.com/internet-of-things/what-is-iot/',' _blank' )"> Read more about IoT here! </button> 
+
+                    <!--Kode hentet fra https://www.w3docs.com/snippets/html/how-to-create-an-html-button-that-acts-like-a-link.html-->
+                    <button class="knapp-intro" onclick= "window.location.href='https://www.oracle.com/internet-of-things/what-is-iot/';"> Read more about IoT here! </button> 
                 </div>
                 <div class="item">
                     <div class="bildeIntro">
@@ -245,6 +247,11 @@
                 </div>
             </div>
         </div>   
-    </main>  
+    </main> 
+    <footer>
+        <div class="boxFooter">
+            
+        </div>
+    </footer> 
 </body>
 </html>
