--- a/aktuelt.html
+++ b/aktuelt.html
@@ -24,7 +24,7 @@
     <header>
         <a href="index.html">
             <div class="logoSpinning">
-                      <img src="images/IoT.png" alt="Internet of things icon spinning">  
+                      <img src="images/IoT.png" alt="Header internet of things icon spinning">  
             </div>
         </a>
     </header>
@@ -32,9 +32,9 @@
     <!--Her legges sidebar-->
         <div id="mySidebar" class="nav">
             <div class="logoSpinning2">
-                <img src="images/IoT-white.png" alt="Internet of things icon spinning">  
+                <img src="images/IoT-white.png" alt="Sidebar internet of things icon spinning">  
              </div>
-            <a href="javascript:void(0)" onclick="OpenOrClose()"></a> 
+            <a href="javascript:void(0)" title="Meny" onclick="OpenOrClose()"></a> 
             <a href="index.html">HJEM</a>
             <a href="meny.html">MENY</a>
             <a href="booking.html" class="nav-booking">BOOKING</a>  
@@ -90,7 +90,7 @@
                             <div class="bildeTekst-kilde">
                               <p><small>OsloMet, (u.å.)</small></p>  
                             </div>
-                            <h3>Smart technologies in connected homes – A 2019 Norwegian consumer survey</h3>
+                            <h1>Smart technologies in connected homes – A 2019 Norwegian consumer survey</h1>
                             <p><b>Author</b> Dag Slettemeås</p>
                             <p><b>Publisher</b> Consumption Research Norway (SIFO), OsloMet – Oslo Metropolitan University</p>
                             <p><b>Published</b> 2019</p>
