--- a/meny.html
+++ b/meny.html
@@ -23,13 +23,13 @@
         <header>
             <!--Legge inn bildekilde-->
             <a href="index.html">
-                <img src="images/logo.png" alt="Sulten hjemlogo">
+                <img src="images/logo2.png" alt="Sulten hjemlogo">
             </a>
         </header>
 
         <!-- Legge inn kilde på js under -->
         <nav id="mySidebar">
-            <a href="javascript:void(0)" class="closebtn text-white" onclick="OpenOrClose()"></a> 
+            <a href="javascript:void(0)" class="closebtn text-white" onclick="OpenOrClose()" title="Åpne meny"></a> 
             <a href="index.html">HJEM</a>
             <a href="meny.html">MENY</a>
             <a href="booking.html" class="nav-booking">BOOKING</a>
@@ -55,8 +55,8 @@
         <div class="meny">  
             <h1 style=" font-size: 58px; text-align: center;">Meny</h1> 
             <h2 style="color: #382c20; font-size: 28px; text-align: center;">Åpningstider: </h2>
-            <p class="åpningstider">Mandag-torsdag 09:00-18:00 </p>
-            <p class="åpningstider">Fredag-søndag 09:00-16:00</p>
+            <p class="åpningstider">Mandag-torsdag 10:00-23:00 </p>
+            <p class="åpningstider">Fredag-søndag 12:00-23:00</p>
                     
     
     <!--Frokostmeny-->
@@ -250,19 +250,19 @@
             <div class="rad-footer">
                 <div class="kolonne-footer">
                     <h2>Åpningstider</h2>
-                    <p>Man - tor 12 - 23</p>
-                    <p>Fre - søn 12 - 02</p>
+                    <p>Man - tor 10 - 23</p>
+                    <p>Fre - søn 12 - 23</p>
             </div>
 
                 <div class="kolonne-footer">
                     <h2>Kontaktinfo</h2>
-                    <a href="tel:657 56 589" class="fa fa-phone"></a>
-                    <a href="tel:657 56 589" class="telefonnr">657 56 589</a>
+                    <a href="tel:657 56 589" class="fa fa-phone" title="kontakt oss via facebook"></a>
+                    <a href="tel:657 56 589" class="telefonnr">657 56 589 </a>
                     <br>
-                    <a href="https://facebook.com" target="_blank" class="fa fa-facebook"></a>
-                    <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-                    <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg"></a>
-                    <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg"></a>
+                    <a href="https://facebook.com" target="_blank" class="fa fa-facebook" title="kontakt oss via facebook"></a>
+                    <a href="https://twitter.com/" target="_blank" class="fa fa-twitter" title="kontakt oss via twitter"></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg" title="kontakt oss via instagram"></a>
+                    <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg" title="kontakt oss via e-post"></a>
             </div>
 
                 <div class="kolonne-footer">
