--- a/aktuelt.html
+++ b/aktuelt.html
@@ -81,7 +81,7 @@
                         These devices range from ordinary household objects to sophisticated industrial tools."(Oracle, 2021). </p>
 
                     <!--Kode hentet fra https://www.w3docs.com/snippets/html/how-to-create-an-html-button-that-acts-like-a-link.html-->
-                    <button class="knapp-intro" onclick= "window.location.href='https://www.oracle.com/internet-of-things/what-is-iot/';"> Read more about IoT here! </button> 
+                    <button class="knapp-intro" onclick= "window.location.href='https://www.oracle.com/internet-of-things/what-is-iot/';"> Read more about Internet of Things here! </button> 
                 </div>
                 <div class="item">
                     <div class="bildeIntro">
