fiksings header, slideshow

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
         <!-- Letter spacing -->
 
+        <!-- Dobbeltsjekk slideshow og footer ved nye bilder -->
+
         <header>
 
             <div class="bildeseksjon">
-
-                <!-- Legge inn kilde på js under -->
 
                 <div>            
                     <a href="index.html">
@@ -47,6 +47,8 @@
                 </div>
 
             </div>
+
+            <!-- Legge inn kilde på js under -->
 
             <div id="main">
                 <button class="openbtn" onclick="OpenOrClose()">☰</button>
@@ -74,11 +76,11 @@
                 </div>
 
                 <div class="bilde-slideshow fade">
-                    <img src="images/5.jpg" alt="Oversikt over hele restaurent">
+                    <img src="images/5.jpg" alt="Oversikt over hele restauranten">
                 </div>
 
                 <div class="bilde-slideshow fade">
-                    <img src="images/13.jpg" alt="Koldtbord med diverse desserter, som muffins og frukt">
+                    <img src="images/2.jpg" alt="Koldtbord med diverse desserter, som muffins og frukt">
                 </div>
 
                 <!--Neste- og tilbakeknapper-->
