--- a/meny.html
+++ b/meny.html
@@ -40,7 +40,7 @@
             <nav id="mySidebar">
                 <a href="javascript:void(0)" class="closebtn text-white" onclick="OpenOrClose()" title="Åpne meny"></a>
                 <a href="index.html">Hjem</a>
-                <a href="meny.html">Hjem</a>
+                <a href="meny.html">Meny</a>
                 <a href="booking.html" class="nav-booking">Booking</a>
                 <a href="aktuelt.html">Topical page</a>
                 <a href="brukervennlighet.html">ACCESSIBILITY PAGE</a>
@@ -58,8 +58,8 @@
         </div>
 
         <div class="meny">  
-            <h1 style=" font-size: 56px; text-align: center;">Meny</h1> 
-            <h2 style="color: #382c20; font-size: 26px; text-align: center;">Åpningstider: </h2>
+            <h1 style=" font-size: 3.5rem; text-align: center;">Meny</h1> 
+            <h2 style="color: #382c20; font-size: 1.4rem; text-align: center;">Åpningstider: </h2>
             <p class="åpningstider">Mandag-torsdag 10:00-23:00 </p>
             <p class="åpningstider">Fredag-søndag 12:00-23:00</p>
                     
