--- a/meny.html
+++ b/meny.html
@@ -261,13 +261,13 @@
 
                 <div class="kolonne-footer">
                     <h2>Kontaktinfo</h2>
-                    <a href="tel:657 56 589" class="fa fa-phone" title="kontakt oss via facebook"></a>
-                    <a href="tel:657 56 589" class="telefonnr">657 56 589 </a>
+                    <a href="tel:657 56 589" class="fa fa-phone" style="color: #f5fffa;" title="Kontakt oss via telefon"></a>
+                    <a href="tel:657 56 589" class="telefonnr" style="color: #f5fffa;">657 56 589</a>
                     <br>
-                    <a href="https://facebook.com" target="_blank" class="fa fa-facebook" title="kontakt oss via facebook"></a>
-                    <a href="https://twitter.com/" target="_blank" class="fa fa-twitter" title="kontakt oss via twitter"></a>
-                    <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg" title="kontakt oss via instagram"></a>
-                    <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg" title="kontakt oss via e-post"></a>
+                    <a href="https://facebook.com" target="_blank" class="fa fa-facebook" title="Kontakt oss via facebook"></a>
+                    <a href="https://twitter.com/" target="_blank" class="fa fa-twitter" title="Kontakt oss via twitter"></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg" title="Kontakt oss via instagram"></a>
+                    <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg" title="Kontakt oss via mail"></a>
             </div>
 
                 <div class="kolonne-footer">
