--- a/aktuelt.html
+++ b/aktuelt.html
@@ -249,9 +249,11 @@
             </div>
         </div>   
     </main> 
+
+
+    <!--Her legges tom footer-->
     <footer>
         <div class="boxFooter">
-            
         </div>
     </footer> 
 </body>
