--- a/aktuelt.html
+++ b/aktuelt.html
@@ -259,8 +259,7 @@
 
     <!--Her legges tom footer-->
     <footer>
-        <div class="boxFooter">
-        </div>
+        <div class="boxFooter"></div>
     </footer> 
 </body>
 </html>
