--- a/meny.html
+++ b/meny.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width-device-width, initial-scale=1">
         <link rel="stylesheet" href="style/menystyle.css">
 
-        <title>sulten!</title>
+        <title>Meny</title>
         <link rel="icon" href="images/utropstegn.png" type="image/x-icon">
        
         <script src="https://kit.fontawesome.com/fbb98cbe58.js" crossorigin="anonymous"></script>
@@ -68,6 +68,7 @@
  
 <!--Hovedbilde med tekst-->
         <div class="container">
+            <!--Fotograf: Zakaria Zayane Kilde https://unsplash.com/photos/0uAVsDcyD0M -->
             <img src="images/restaurantMeny.jpg" alt="restaurant med bord og stoler">
             <h1 class="centered">Velkommen til vår restaurant. Her kan du nyte et godt måltid i en behagelig atmosfære.</h1>
         </div>
@@ -117,6 +118,7 @@
             </div>
 
             <div class="box-meny-frokostbilde">
+                <!--Fotograf: Micheile dot com. Kilde: https://unsplash.com/photos/vLHzjRNFbEQ-->
                 <img src="images/havre.jpg" alt="havregrøt i skål">
             </div>
         </div>
@@ -173,6 +175,7 @@
         <div class="dessertmeny">
 
             <div class="box-meny-dessert-bilde">
+                <!--Fotograf: Maddi Bazzocco. Kilde: https://unsplash.com/photos/wRU27yGfSLQ-->
                 <img src="images/croissant.jpg" alt="croissant med mandler på et trefat">
             </div>
 
@@ -264,7 +267,7 @@
             </div>
         </div>
     </div>      
-</div>
+
         </main>
         <footer>
             <div class="rad-footer">
