--- a/brukervennlighet.html
+++ b/brukervennlighet.html
@@ -63,7 +63,15 @@
     </header>
     <main>
         <div class="box1">
-            
+            <h1>Hvordan vi testet brukervennlighet</h1>
+            <p>For å sjekke brukervennligheten på de ulike sidene våre brukte vi Google Chrome-utvidelsen <a href="https://wave.webaim.org/">WAVE</a>, 
+                et verktøy for evaluering av brukervennlighet på nett. WAVE gir oss tilbakemelding om vi har noen store problemer med oppsettet, 
+                kontraster, og gir kommentarer på gode funksjoner. Allerede fra starten, la gruppen fokus på å gjøre nettsiden så tilgjengelig for så mange brukere som mulig. 
+                Vi tenkte dermed nøye gjennom hvilke farger, fonter og størrelser på tekst vi ville bruke. Alt tekst i bilder sørget vi også for å ha med. 
+                Da vi kjørte de ulike sidene gjennom WAVE-testen for første gang, fikk vi utslag på et par problemer. De problemene var hovedsakelig kontrastproblemer</p>
+                <p>Gruppen gjorde bevisste valg på ulike ting, blant annet når det kom til overskrifter, media queries og alt tekst. 
+                    På H1 og de andre overskriftsnivåene har vi valgt å gjøre om fonten fra brødtekst (Roboto) til den vi bruker i headeren (Bebas Neue), samt øke fontstørrelse, avstand på bokstaver og linjehøyde. 
+                    For at nettsiden skal være tilgjengelig på alle enheter, valgte vi å dele inn media queries til standard skjermen (850px og høyere), tablet (850px til 470px), og mobil (480px og mindre)</p>
         </div>
 
     </main>
