--- a/meny.html
+++ b/meny.html
@@ -270,12 +270,13 @@
 
         </main>
         <footer>
+            <!--Åpningstider, kontaktinfo, adresse-->
             <div class="rad-footer">
                 <div class="kolonne-footer">
                     <h2>Åpningstider</h2>
                     <p>Man - tor 10 - 23</p>
                     <p>Fre - søn 12 - 23</p>
-            </div>
+                </div>
 
                 <div class="kolonne-footer">
                     <h2>Kontaktinfo</h2>
@@ -286,13 +287,13 @@
                     <a href="https://twitter.com/" target="_blank" class="fa fa-twitter" title="Kontakt oss via twitter"></a>
                     <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram fa-lg" title="Kontakt oss via instagram"></a>
                     <a href="mailto:restaurantsulten@sulten.com" class="fa fa-envelope fa-lg" title="Kontakt oss via mail"></a>
-            </div>
+                </div>
 
                 <div class="kolonne-footer">
                     <h2>Adresse</h2>
                     <p>Skomværsgata 2</p>
                     <p>3921 Porsgrunn</p>
-            </div>
+                </div>
 
             </div>
 
