--- a/index.html
+++ b/index.html
@@ -18,29 +18,15 @@
     </head>
     <body>
 
-        <!-- Har vi lagt inn kilder på alt?? Bilder? -->
-
-        <!-- Har alle brukt gode kommentarer underveis slik at en annen lett kan komme inn og ta over koden? -->
-
         <!-- Sjekk grading sheet -->
 
-        <!-- Kommentere meir i myFile.js? -->
-
-        <!-- Åpningstider på forside, meny og booking må være like (ukedag skrives ikke med stor bokstav midt i en setning)-->
-
-        <!-- Når alle bilder på forside er lagt inn, så må eg sjekke at høyden ikkje forandres i tablet- og mobilversjon -->
-
-        <!-- Like breakpoints på alle sidene -->
-
-        <!-- Letter spacing -->
-
-        <!-- Dobbeltsjekk slideshow og footer ved nye bilder -->
+        <!-- Aria hidden hos Lise -->
 
         <header>
 
             <div class="bildeseksjon">    
-
                 <a href="index.html">
+                    <!-- Logo laget selv i illustrator -->
                     <img src="images/logo2.png" alt="Sulten hjemlogo">
                 </a>
 
@@ -87,20 +73,23 @@
             <div class="slideshow">
 
                 <div class="bilde-slideshow fade">
+                    <!-- Fotograf: Nafinia Putra, kilde: https://unsplash.com/photos/Kwdp-0pok-I -->
                     <img src="images/4.jpg" alt="Kaffebar med ulike kaffetyper bak en disk">
                 </div>
 
                 <div class="bilde-slideshow fade">
+                    <!-- Fotograf: shawnanggg, kilde: https://unsplash.com/photos/nmpW_WwwVSc -->
                     <img src="images/5.jpg" alt="Oversikt over hele restauranten">
                 </div>
 
                 <div class="bilde-slideshow fade">
+                    <!-- Fotograf: Chasse Sauvage, kilde: https://unsplash.com/photos/zlUGL4hBHcw -->
                     <img src="images/2.jpg" alt="Koldtbord med diverse desserter, som muffins og frukt">
                 </div>
 
-                <!--Neste- og tilbakeknapper-->
+                <!--Frem- og tilbakeknapper-->
                 <a class="knapp-tilbake" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="knapp-neste" onclick="plusSlides(1)">&#10095;</a>
+                <a class="knapp-frem" onclick="plusSlides(1)">&#10095;</a>
 
             </div>
 
